# futility

./: README.md  Util.hs  futility.cabal
Data/: Accessor.hs  Dimorph.hs  Invotomorph.hs  MicroScope.hs  Morphism.hs  Stringent.hs  TypeCast.hs  Wrapped.hs
Data/Morphism/: Language.hs  Parse.hs
Data/Morphism/Dimorph/: Alt.hs  Derive.hs  Language.hs  Parse.hs  Prim.hs  Quasi.hs  Test.hs  X.hs
Data/Morphism/Invotomorph/: Language.hs  Parse.hs  Prim.hs  Quasi.hs  Test.hs
Data/Test/: Language.hs  Parse.hs  Quasi.hs
Util/: Advanced.hs  Applicative.hs  Conditional.hs  Generic.hs  Helper.hs  List.hs  String.hs  TH.hs  Tuple.hs
Util/List/: Advanced.hs  Safe.hs
Util/Tuple/: Apply.hs  Rotate.hs  Variadic.hs
