name:                futility
version:             0.1.0.0
synopsis:            Collection of various utility functions and types
description:         Assorted utility functions, data types, and classes
homepage:            https://github.com/archaephyrryx/futility#readme
author:              Peter Duchovni (archaephyrryx)
maintainer:          Peter Duchovni (archaephyrryx)
copyright:           2017 Peter Duchovni
category:            Utility
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  exposed-modules:
      Util
      Util.Advanced
      Util.Applicative
      Util.Conditional
      Util.Generic
      Util.Helper
      Util.List
      Util.List.Safe
      Util.List.Advanced
      Util.String
      Util.TH
      Util.Tuple
      Util.Tuple.Apply
      Util.Tuple.Rotate
      Data.Invotomorph
      Data.Dimorph
      Data.Morphism
      Data.Stringent
      Data.Morphism.Dimorph.Alt
      Data.Morphism.Dimorph.Language
      Data.Morphism.Dimorph.Parse
      Data.Morphism.Dimorph.Prim
      Data.Morphism.Dimorph.Quasi
      Data.Morphism.Invotomorph.Prim
      Data.Morphism.Language
      Data.Morphism.Parse
      Data.TypeCast
      Data.Wrapped
  build-depends:
    base >=4.7 && <5,
    lens, 
    array >=0.5,
    safecopy >=0.8,
    containers >= 0.5,
    template-haskell >=2.11.1.0,
    split >=0.2,
    extra,
    parsec
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/archaephyrryx/futility
